# fsr-operator

./: .gitignore  Cargo.toml  Dockerfile  README.md  example.env  old.main.rs
archive/: example.rs  example_cr.yaml  example_crd.yaml  example_destination.yaml  example_source.yaml
config/crd/: pvsync.storage.cndev.nl.yaml  tracker.cndev.nl.yaml
config/samples/: pvsync-example.yaml  pvsync-recovery-example.yaml  test-pv.yaml  tracker-example.yaml
src/: crd.rs  extwatcher.rs  generic_status.rs  lib.rs  main.rs  objectstorage.rs  resource.rs  status.rs  storage.rs  utils.rs
