[package]
name = "fsr-operator"
version = "0.1.0"
edition = "2024"

[dependencies]
object_store = { version = "0.12.4", features = ["aws", "azure"] }
# Cloudian is handled by the 'aws' S3 feature, but requires a custom endpoint.
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
bytes = "1"
url = "2"
anyhow = "1.0.100"
